# Maaml

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
maaml/: __init__.py  cleaning.py  deep_learning.py  machine_learning.py  preprocessing.py  preprocessing_and_ML_functions_build.py  utils.py
maaml/Datasets/UAH_dataset/: data_acquisition.py  time_series.py
maaml/Datasets/UAH_dataset/dataset/: UAHDataset.parquet
maaml/preprocessing/: preprocessing.py
maaml/test/: data_boot_test.ipynb
tests/: #time_series_data_test.py#  data_boot_test.ipynb  time_series_data_test.py
