[metadata]
name = maaml
version = 0.2.1
author = Najemeddine Abdennour
author_email = najemabdennour@gmail.com
description = For time series datasets Machine learning pipline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/najemabd/uah_dataset_remaster
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas >=1.3
    numpy
    sklearn
    keras>=2.7
    matplotlib 
include_package_data = False
